feat:更新功能初步成型；完善文档；新增工具；小修小补 本次更新 LP进行了贡献. 1. 完善文档   /docs/一些缩写.md   不再赘述   /docs/关于 update.py .md   不再赘述 2. 新增小工具   /tools/GetFileList.py   不再赘述 3. 空客文件   /Flag_OS/data/fileList.json 4. 新增更新模块   /Flag_OS/system/update.py

--- a/docs/一些缩写.md
+++ b/docs/一些缩写.md
@@ -7,3 +7,4 @@
 | **BS** | **B**oot **S**elect| **启动选择器** |
 | **FOS** | **F**lag **OS** | / |
 | **SURT** | **S**ystem **U**ni **R**un**t**ime | **系统统一运行库** |
+| **ST** | **ST**rategy |策略|
