docs/fix/feat:完善本commit文档，彻底移除SURT，回滚部分错误更改，部分对象引入回调函数机制 1. 完善文档   /docs/关于core.py .md/# GetDeviceID 新增有关「引入回调函数机制」的提示性文本   /docs/关于core.py .md/# Screenshot  新增「关于oled对象」   /docs/关于SURT.md 重命名为“[废弃]关于SURT.md”并新增部分警示性语言   /docs/一些缩写.md    新增 提示有关SURT的缩写现已废弃 的文本 2. 移除/SeniorOS/system下关于SURT的内容   全部修改为在代码开头静态（普通import）引入. 3. 回滚部分commit修改   /SeniorOS/system/core.py class-GetTime 回滚commit7ec3a3bf9ccaf8f65c1e3049b49e163b5050f03e在此类中所做更改 4. 部分对象引入回调函数机制   /SeniorOS/system/core.py class(Screenshot) 将类中使用的mpython.oled对象替换为选参 供用户自定义   /SeniorOS/system/core.py func(GetDeviceID) 将模式0中使用到的network.WLAN(network.STA_IF)替换为选参 供用户自定义 5. 过于细微 无直接影响的更改

--- a/docs/一些缩写.md
+++ b/docs/一些缩写.md
@@ -6,5 +6,5 @@
 |-|-|-|
 | **BS** | **B**oot **S**elect| **启动选择器** |
 | **FOS** | **F**lag **OS** | / |
-| **SURT** | **S**ystem **U**ni **R**un**t**ime | **系统统一运行库** |
 | **ST** | **ST**rategy |策略|
+| **SURT** | **S**ystem **U**ni **R**un**t**ime | ** \[已废弃\] ** 系统统一运行库 |
